0.6
    * Added install by USERLEVEL_ADMIN only

0.5
    * View and follow upgrade process

0.4
    * Fixed checksums var
    * Enhanced cleanTemplatesC()
    * Added some debug and process messages

0.3
    * Compatibility fixes [brockhaus]

0.2:
    * Fixed: Didn't create new directories which were part of the new version
    * Fixed: Choked on new files of the new version which didn't exist
             in the old version
    * Clean cachefiles in templates_c just before the upgrade to prevent
      display-errors 

0.1.2:
    * Fixed call-by-reference-warning in php 5.3
    * Added checksum-test prior to unpacking to kind of authenticate
      the update
    * Added checksum-test after unpacking to check the integrity 