@@ -1,7 +1,7 @@
 <?php
 
-@define('PLUGIN_EVENT_AUTOUPDATE_NAME',     'Autoupdate (Experimental)');
-@define('PLUGIN_EVENT_AUTOUPDATE_DESC',     'Experimental. When the dashboard-plugin detects an update, this plugin adds the option to update the blog directly with one click from within the adminarea.');
-@define('PLUGIN_EVENT_AUTOUPDATE_UPDATEBUTTON',     'Update now automatically');
+@define('PLUGIN_EVENT_AUTOUPDATE_NAME',     'Serendipity Autoupdate');
+@define('PLUGIN_EVENT_AUTOUPDATE_DESC',     'When the dashboard-plugin (once a day) detects an update, this plugin adds the option to manually download or automatic upgrade the blog directly with one click from within the adminarea.');
+@define('PLUGIN_EVENT_AUTOUPDATE_UPDATEBUTTON',     'Start automatic upgrade');
 
 ?>
